...
              title: Text(currentPost.title!),
              trailing: IconButton(
                color: Colors.brown,
                icon: const Icon(Icons.update),
                onPressed: () {
                  // update post data
                  currentPost.updateFields(titleField: "This Title changed");
                },
              ),
              onTap: () => Navigator.of(context).push(
                    MaterialPageRoute(builder: (BuildContext context) {
                      return Details(index);
                    }),
...
