...
                            Company newCompany = Company(
                                bs: "change data...bs",
                                name: "Name changed",
                                catchPhrase: "change data...catch");
                            // update user model
                            user.updateFields(
                              nameField: "Mohammed CHAHBOUN 💙",
                              companyField: newCompany,
                            );
                          }),
                      children: [
                        const SizedBox(height: 5.0),
                        Text(user.id.toString()),
...
